<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/frame_border"
    android:layout_margin="16dp"
    android:id="@+id/container1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageHeart"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:background="@drawable/screen_one"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/love_calculator"
        android:textSize="30sp"
        android:textColor="@color/purple_500"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/firstEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/you"
        android:background="@drawable/edit_shape"
        android:paddingHorizontal="20dp"
        android:textSize="30sp"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/secondEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/me"
        android:background="@drawable/edit_shape"
        android:paddingHorizontal="20dp"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/calculateBtn"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@drawable/edit_shape"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:drawableTopCompat="@drawable/ic_baseline_favorite_24"
            android:text="@string/home"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:drawableTopCompat="@drawable/ic_baseline_equalizer_24"
            android:text="@string/history"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>