<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/frame_border"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageHeart"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:background="@drawable/screen_one"
        />

    <TextView
        android:id="@+id/firstTv"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <ImageView
        android:layout_gravity="center"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:backgroundTint="@color/pink"
        android:background="@drawable/ic_baseline_favorite_24"/>

    <TextView
        android:id="@+id/secondTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/resultTv"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/pink"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/percentTv"
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/heart"
        android:paddingTop="25dp"
        android:text="@string/_100"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/tryAgainBtn"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@drawable/edit_shape"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:drawableTopCompat="@drawable/ic_baseline_favorite_24"
            android:text="@string/home"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:drawableTopCompat="@drawable/ic_baseline_equalizer_24"
            android:text="@string/history"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>